public/css/main.css
body {
  background: rgba(27, 27, 27, 0.93);
}

.wrapper {
  width: 1220px;
  margin-left: auto;
  margin-right: auto;
}


.navbar {
  height: 145px;
}

.navbar-inner {
  height: 140px;
}

.navbar h1 {
  padding-left: 0px;
  color: #777777;
}

nav .avatar {
  width: 140px;
  margin-left: -18px;
}

nav .main {
  padding-top: 20px;
  padding-left: 22px;
}

.navbar-inverse .brand, .navbar-inverse .nav > li > a.active {
  color: white;
}

.navbar .feed {
  background-image: url(../img/rss-black.png);
  background-repeat: no-repeat;
  height: 30px;
  margin-top: 25px;
  display: block;
  float: right;
  margin-right: -35px;
}

nav h1.offset3 {
  padding-left: 68px;
}

nav div.offset3 {
  padding-left: 63px;
}

section .sidebar li {
  line-height: 16px;
}

section .sidebar li h4 {
  font-size: 16px;
  font-weight: normal;
}

section .sidebar li p {
  font-size: 12px;
}

section .sidebar a {
  color: #999;
  cursor:pointer;
  text-shadow: #69F5BD 0 0 0;
  text-decoration:none;
}

section .sidebar li.active a,
section .sidebar li a:hover,
section .sidebar li.active a:hover  {
  color: white;
  background-color: inherit;
  text-shadow: black 0 0 0;
}

.blog-post h1 {
  background: #f3efcd;
  border-top: 1px;
  border-left: 1px;
  border-right: 1px;
  border-bottom: 1px;
  border-color: #e2ddb7;
  border-style: solid;
  border-radius: 3px 3px 1px 1px;
  text-shadow: 2px 2px 3px #999;
  -moz-box-shadow: 2px 2px 5px #888;
  -webkit-box-shadow: 2px 2px 5px #888;
  box-shadow: 2px 2px 5px #888;
  font-size: 30px;
  font-weight: inherit;
  font-style: inherit;
}

.content {
  background: rgb(255, 252, 252);
  border-radius: 5px;
  padding: 5px;
}

.about-me section {
  padding     :  5px;
  margin-left :  0;
  font-family :  Helvetica, arial, freesans, clean, sans-serif;
  font-size   :  14px;
  line-height :  1.6;
}
.about-me ul {
  list-style: none;
  margin: 10px;
}
.about-me li {
  padding: 5px;
  margin: 5px;
}
.about-me .stackoverflow img,
 section li.stackoverflow img {
  width: 170px;
  height: 47px;
}
.about-me .linkedin img {
  width: 168px;
  height: 37px;
}
.about-me .geeklist {
  background     :  antiqueWhite;
  width          :  159px;
  padding-top    :  6px;
  padding-bottom :  0;
  margin-left    :  10px;
}
.about-me .wordpress img {
  width: 170px;
}

.doctoc-frame {
  width: 840px;
  height: 1000px;
  margin: 10px;
  border-radius: 3px;
}

article.github {
  padding-left: 26px;
  padding-right: 26px;
}

.github ul {
  list-style: none;
}


.github ul li {
  margin: 30px 0 30px 0;
 }

.github ul li p {
  margin: 5px 120px 10px 0;
}


.github .btn {
  float: right;
  height: 15px;
}

.github .repo-name {
  font-size: 18px;
  text-shadow: rgba(109, 91, 141, 0.4) 2px 2px 4px;
  text-shadow: 3px;
}

.github a.repo-name:hover {
  text-decoration: none;
}

.icon-github-fork {
  background-image: url('../img/github-fork.png');
  background-position: 0 0;
  -webkit-transform: rotate(180deg);  
     -moz-transform: rotate(180deg);
      -ms-transform: rotate(180deg);
       -o-transform: rotate(180deg);
          transform: rotate(180deg);
}

